--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </tr>
 <td>Violet</td>
 <td>Grace</td>
-<td>violetgrace@gmail.com</td>
+<td>violetgracegir@gmail.com</td>
 </tr>
 </body>
 </html>
