--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <style>
     table ,th ,td{
-        border: blue 2px solid;
+        border: solid black ;
+        border-collapse: collapse;
     }
 </style>
 
 <body>
-    <table>
+    <collupse>Group Table</collupse>
+    <table style="margin-inline: auto;">
         <tr>
             <th> first name</th>
             <th>last name</th>
