--- a/INDEX.html
+++ b/INDEX.html
@@ -26,7 +26,7 @@
 </head>
 <body> 
     <form id="form">
-Don't have an account? sign up
+<p>Don't have an account?<a href="/index.html">sign in</a></p>
 <br/>
 <br/>
 Sign in
