--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <form id="form">
-Already have an account? SIGN IN
+<p>Already have an account? <a href="/INDEX.html">sign up</a> </p>
 <br/>
 <br/>
 sign up
