--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <form id="form">
-<p>Already have an account? <a href="/form2.html">sign in</a> </p>
+<p>Already have an account? <a href="/index.html">sign in</a> </p>
 <br/>
 <br/>
 sign up
@@ -48,7 +48,7 @@ sign up
     <input type="checkbox">I've Read and Agree with the terms of Service and Our  Privacy Policy
     <br/>
     <br/>
-    <button style="height: 30px;width: 500;"a href ="/form2.html">sign up</button>
+    <button style="height: 30px;width: 500;"a href ="/index.html">sign up</button>
     <br/>
     
     </form>
