--- a/INDEX.html
+++ b/INDEX.html
@@ -26,7 +26,7 @@
 </head>
 <body> 
     <form id="form">
-<p>Don't have an account?<a href="/form.html">Sign Up</a></p>
+<p>Don't have an account?<a href="/Index.html">Sign Up</a></p>
 <br/>
 <br/>
 Sign in
@@ -46,7 +46,7 @@ Sign in
     <input type="checkbox" >I've Read and Agree with the terms of Service And Our privacy
     <br/>
     <br/>
-    <button style="height: 30px;width: 500px;"><a href="/form.html">log in</a></button>
+    <button style="height: 30px;width: 500px;"><a href="/Index.html">log in</a></button>
 
 
 
