--- a/form.html
+++ b/form.html
@@ -46,7 +46,7 @@ Sign in
     <input type="checkbox" >I've Read and Agree with the terms of Service And Our privacy
     <br/>
     <br/>
-    <button style="height: 30px;width: 500px;"><a href="/index.html">log in</a></button>
+    <button style="height: 30px;width: 500px;"><a href="/Index.html">log in</a></button>
 
 
 
