--- a/form.html
+++ b/form.html
@@ -47,10 +47,13 @@ Sign in
     <br/>
     <br/>
     <button style="height: 30px;width: 500px;"><a href="/Index.html">log in</a></button>
+    <br>
+    <br>
+    ______________________or Sign Up with_____________________
 
 
 
-    </form>
+</form>
 
 
 
